--- a/src/PrivateEndpointCustomDns/PrivateEndpointCustomDns.csproj
+++ b/src/PrivateEndpointCustomDns/PrivateEndpointCustomDns.csproj
@@ -4,7 +4,14 @@
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Azure.Containers.ContainerRegistry" Version="1.1.0-beta.4" />
+    <PackageReference Include="Azure.Identity" Version="1.6.0" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.1.1" />
+    <PackageReference Include="Azure.ResourceManager.Applications.Containers" Version="1.0.0-beta.1" />
+    <PackageReference Include="Azure.ResourceManager.Network" Version="1.0.0-beta.7" />
+    <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.38.1" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.EventGrid" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Azure" Version="1.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.0.1" />
   </ItemGroup>
   <ItemGroup>
